Added and fixed text content.

--- a/BreakDown-web/src/main/webapp/pages/footerxs.html
+++ b/BreakDown-web/src/main/webapp/pages/footerxs.html
@@ -1,18 +1,18 @@
 <footer>
 	<md-toolbar>
 		<div class="md-accent" layout="column" layout-align="center center" layout-padding>
-			<div layout="row">
-				<div flex="50">
-					<h3>Egységes feület</h3>
-					<p>Weboldalunknak fő célja hogy egységesítse a Break versenyek szervezését és egyszerűbbé tegye a megtalálásukat és a jelentkezést.</p>
+			<div layout="row" layout-padding>
+				<div flex=50>
+					<h3>Egységes felület</h3>
+					<p>Weboldalunk fő célja, hogy egységesítse a break versenyek szervezését és egyszerűbbé tegye a megtalálásukat és a jelentkezést.</p>
 				</div>
-				<div flex="25">
-					<h3>Egységes feület</h3>
-					<p>Weboldalunknak fő célja hogy egységesítse a Break versenyek szervezését és egyszerűbbé tegye a megtalálásukat és a jelentkezést.</p>
+				<div flex=25 layout-padding>
+					<h3>Személyre szabott versenylista</h3>
+					<p>Megadhatja, hogy milyen városok versenyei érdeklik Önt, amelyek így a főoldalon könnyen elérhetővé válnak.</p>
 				</div>
-				<div flex>
-					<h3>Egységes feület</h3>
-					<p>Weboldalunknak fő célja hogy egységesítse a Break versenyek szervezését és egyszerűbbé tegye a megtalálásukat és a jelentkezést.</p>
+				<div flex=25 layout-padding>
+					<h3>Verseny kiírások egyszerűen</h3>
+					<p>Felhasználóbarát felületünknek köszönhetően fennakadás nélkül létrehozhatóak a versenyek.</p>
 				</div>
 			</div>
 			<h2>© Copyright - BreakDown</h2>
