--- a/BreakDown-web/src/main/webapp/pages/login.html
+++ b/BreakDown-web/src/main/webapp/pages/login.html
@@ -6,7 +6,7 @@
 				<label>E-mail cím</label>
 				<input type="text" data-ng-model="email" name="email" required>
 				<div data-ng-messages="login.email.$error">
-					<div data-ng-message="required">Adja meg a BBoy/Girl nevét!</div>
+					<div data-ng-message="required">Adja meg az e-mail címét!</div>
 				</div>
 			</md-input-container>
 			<md-input-container>
