--- a/BreakDown-web/src/main/webapp/pages/competitions.html
+++ b/BreakDown-web/src/main/webapp/pages/competitions.html
@@ -5,7 +5,7 @@
 	</md-button>
 	<div data-ng-if="cards.length==0">Még nincs meghírdetve egy verseny sem.</div>
 	<md-content layout="row" layout-wrap>
-		<div ng-repeat="comp in cards" flex-gt-md=25 flex-md=30 flex-sm=50>
+		<div ng-repeat="comp in cards | orderBy : startTime" flex-gt-md=25 flex-md=30 flex-sm=50>
 			<md-card md-theme="default" md-theme-watch>
 	        <md-card-title>
 	          <md-card-title-text>
