Fixed date print.

--- a/BreakDown-web/src/main/webapp/pages/competitions.html
+++ b/BreakDown-web/src/main/webapp/pages/competitions.html
@@ -10,7 +10,7 @@
 	        <md-card-title>
 	          <md-card-title-text>
 	            <span class="md-headline">{{comp.name}}</span>
-	            <span class="md-subhead">Dátum: {{comp.startTime | date : 'yyyy:MM:dd'}}</span>
+	            <span class="md-subhead">Dátum: {{comp.startTime | date : 'yyyy.MM.dd.'}}</span>
 	            <span class="md-subhead">Város: {{comp.location.city}}</span>
 	            <span class="md-subhead">Leírás: {{comp.description}}</span>
 	            <span class="md-subhead">Jelentkezők száma: {{comp.competitorIds.length}}</span>
