--- a/BreakDown-web/src/main/webapp/pages/singlecomp.html
+++ b/BreakDown-web/src/main/webapp/pages/singlecomp.html
@@ -21,7 +21,7 @@
 		</div>
 		<div>
 			<h3>Dátum:</h3>
-			<span>{{comp.startTime | date : 'yyyy.MM.dd'}}</span>
+			<span>{{comp.startTime | date : 'yyyy.MM.dd.'}}</span>
 		</div>
 		<div>
 			<h3>DJ:</h3>
