Change print to more offical style.

--- a/BreakDown-web/src/main/webapp/pages/competitions.html
+++ b/BreakDown-web/src/main/webapp/pages/competitions.html
@@ -21,7 +21,7 @@
 	          </md-card-title-media>
 	        </md-card-title>
 	        <md-card-actions layout="row" layout-align="end center">
-	          <md-button data-ng-click="seeComp(comp.id)">További infók</md-button>
+	          <md-button data-ng-click="seeComp(comp.id)">További információk</md-button>
 	        </md-card-actions>
 	      </md-card>
 		</div>
