Fixed responsive layout bug.

--- a/BreakDown-web/src/main/webapp/pages/profil.html
+++ b/BreakDown-web/src/main/webapp/pages/profil.html
@@ -1,5 +1,5 @@
 <h1 layout-padding>Profil</h1>
-<div layout-gt-sx="row" layout-xs="column" data-ng-controller="profilController" layout-padding>
+<div layout-gt-xs="row" layout-xs="column" data-ng-controller="profilController" layout-padding>
 	
 	<md-card md-theme="default" md-theme-watch flex-gt-xs=50>
 	        <md-card-title>
