--- a/BreakDown-web/src/main/webapp/pages/home.html
+++ b/BreakDown-web/src/main/webapp/pages/home.html
@@ -7,7 +7,7 @@
 	<div data-ng-controller="homeController"  data-ng-if="user!=null">
 		<md-toolbar class="md-accent">
 				<div class="md-toolbar-tools">
-					Érdekelt városokban megrendezett versenyek
+					Érdekelt városokban megrendezésre kerülő versenyek
 				</div>
 		</md-toolbar>
 		<md-list data-ng-repeat="comps in compsInCities" layout-align="start stretch">
