--- a/BreakDown-web/src/main/webapp/pages/home.html
+++ b/BreakDown-web/src/main/webapp/pages/home.html
@@ -18,7 +18,7 @@
 	            	<h4>{{competition.startTime | date : 'yyyy:MM:dd'}}</h4>
 	            	<p>Jelentkzők száma: {{competition.competitorIds.length}}</p>
 	         	</div>
-	         	<md-button class="md-secondary md-primary" data-ng-click="seeComp(competition.id)">További infók</md-button>
+	         	<md-button class="md-secondary md-primary" data-ng-click="seeComp(competition.id)">További információk</md-button>
 	         	<md-divider data-ng-if="!$last"></md-divider>
 			</md-list-item>
 			<md-divider ng-if="!$last"></md-divider>
