--- a/BreakDown-web/src/main/webapp/index.html
+++ b/BreakDown-web/src/main/webapp/index.html
@@ -38,6 +38,7 @@
 	<script src="resources/angularjs/controllers/profilController.js"></script>
 	<script src="resources/angularjs/controllers/homeController.js"></script>
 	<script src="resources/angularjs/controllers/logoutController.js"></script>
+	<script src="resources/angularjs/controllers/compWinnersController.js"></script>
 	<script src="resources/angularjs/directives.js"></script>
 	
 	<script src="resources/momentjs/moment.js"></script>
