--- a/BreakDown-web/src/main/webapp/pages/competitions.html
+++ b/BreakDown-web/src/main/webapp/pages/competitions.html
@@ -5,7 +5,31 @@
 	</md-button>
 	<div data-ng-if="cards.length==0">Még nincs meghírdetve egy verseny sem.</div>
 	<md-content layout="row" layout-wrap>
-		<div ng-repeat="comp in cards | orderBy : 'startTime'" flex-gt-md=25 flex-md=30 flex-sm=50>
+		<div ng-repeat="comp in cards | orderBy : 'startTime' | filter :{finished:'false'}" flex-gt-md=25 flex-md=30 flex-sm=50>
+			<md-card md-theme="default" md-theme-watch>
+	        <md-card-title>
+	          <md-card-title-text>
+	            <span class="md-headline">{{comp.name}}</span>
+	            <span class="md-subhead">Dátum: {{comp.startTime | date : 'yyyy.MM.dd.'}}</span>
+	            <span class="md-subhead">Város: {{comp.location.city}}</span>
+	            <span class="md-subhead">Leírás: {{comp.description}}</span>
+	            <span class="md-subhead">Jelentkezők száma: {{comp.competitorIds.length}}</span>
+	          </md-card-title-text>
+	          <md-card-title-media>
+	            <div class="md-media-lg card-media">
+	            </div>
+	          </md-card-title-media>
+	        </md-card-title>
+	        <md-card-actions layout="row" layout-align="end center">
+	          <md-button data-ng-click="seeComp(comp.id)">További információk</md-button>
+	        </md-card-actions>
+	      </md-card>
+		</div>
+	</md-content>
+	<h1 class="md-display-1">Lezárt versenyek</h1>
+	<div data-ng-if="cards.length==0">Még nincs egy lezárt verseny sem.</div>
+	<md-content layout="row" layout-wrap>
+		<div ng-repeat="comp in cards | orderBy : 'startTime' | filter : {finished: 'true'}" flex-gt-md=25 flex-md=30 flex-sm=50>
 			<md-card md-theme="default" md-theme-watch>
 	        <md-card-title>
 	          <md-card-title-text>
