--- a/BreakDown-web/src/main/webapp/pages/singlecomp.html
+++ b/BreakDown-web/src/main/webapp/pages/singlecomp.html
@@ -2,8 +2,17 @@
 	<div layout="column" layout-padding flex-gt-xs=50>
 		<h1>
 			{{comp.name | uppercase}}
-			<md-button class="md-accent" data-ng-if="user != null" data-ng-click="signUpDown()">{{signUpToggle}}</md-button>
+			<md-button class="md-accent" data-ng-if="user != null && !comp.finished" data-ng-click="signUpDown()">{{signUpToggle}}</md-button>
 		</h1>
+		<div data-ng-if="comp.finished">
+			<h2 md-colors="{color: 'accent'}">A verseny véget ért!</h2>
+			<h4>Nyerteseink:</h4>
+			<div ng-repeat="winner in comp.winners">
+				<span>{{winner.winnerUsername}} : </span>
+				<span>{{winner.description}}</span><br>
+			</div>
+			
+		</div>
 		<div>
 			<h3>Szervező:</h3>
 			<span>{{organizer}}</span>
@@ -50,9 +59,10 @@
 			</md-list-item>
 			<p data-ng-show="events.length == 0">Nincs esemény hozzáadva</p>
 		</md-list>
-		<div data-ng-if="comp.organizerId == user.id || user.role=='ADMIN'" layout="column">
+		<div ng-if="comp.organizerId == user.id || user.role=='ADMIN'" layout="column" ng-cloak>
 			<h2>Szervezői lehetőségek</h2>
 			<md-button class="md-primare md-raised" data-ng-click="getCompetitors($event)">Jelentkezők listázása</md-button>
+			<md-button ng-if="user.id==comp.organizerId && !comp.finished" class="md-accent md-raised" data-ng-click="finishComp(comp)">Verseny lezárása.</md-button>
 			<md-button class="md-warn md-raised" data-ng-click="showConfirm($event)">Esemény törlése</md-button>
 		</div>
 	</div>
