--- a/BreakDown-web/src/main/webapp/index.html
+++ b/BreakDown-web/src/main/webapp/index.html
@@ -39,6 +39,10 @@
 	<script src="resources/angularjs/controllers/homeController.js"></script>
 	<script src="resources/angularjs/controllers/logoutController.js"></script>
 	<script src="resources/angularjs/controllers/compWinnersController.js"></script>
+	<script src="resources/angularjs/controllers/searchBreakersController.js"></script>
+	<script src="resources/angularjs/controllers/breakerProfilController.js"></script>
+	<script src="resources/angularjs/filters/genderFilter.js"></script>
+	<script src="resources/angularjs/filters/roleFilter.js"></script>
 	<script src="resources/angularjs/directives.js"></script>
 	
 	<script src="resources/momentjs/moment.js"></script>
