--- a/BreakDown-web/src/main/webapp/pages/searchforbreakers.html
+++ b/BreakDown-web/src/main/webapp/pages/searchforbreakers.html
@@ -2,7 +2,7 @@
 <div data-ng-controller="searchBreakersController" layout-padding>
 	<h1>Breakes keresése</h1>
 	<md-input-container>
-		<label>Bármilyen kulcsszó</label>
+		<label>Kulcsszó</label>
 		<input type="text" data-ng-model="searchKey">
 	</md-input-container>
 	<md-list layout-align="start stretch">
